--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "growsp-dev-container",
-  "image": "yarinpour/growsp",  // Use your existing image here
+  "image": "yarinpour/growsp1",
   "runArgs": [
     "--gpus", "all"
   ],
@@ -8,6 +8,6 @@
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind"
   ],
-  "remoteUser": "root"
+  "remoteUser": "root",
+  "postCreateCommand": "pip install scikit-learn==0.22.2 open3d"
 }
-
